Security/Network/workloads.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: external
  name: external
  namespace: net-policy
spec:
  containers:
    - env:
        - name: APP_NAME
          value: External Facing Application
        - name: BG_COLOR
          value: red
      image: kodekloud/webapp-conntest
      imagePullPolicy: Always
      name: external
      resources:
        requests:
          cpu: "0.1"
          memory: "64Mi"
        limits:
          cpu: "0.3"
          memory: "96Mi"
      ports:
        - containerPort: 8080
          protocol: TCP

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: internal
  name: internal
  namespace: net-policy
spec:
  containers:
    - env:
        - name: APP_NAME
          value: Internal Facing Application
        - name: BG_COLOR
          value: blue
      image: kodekloud/webapp-conntest
      imagePullPolicy: Always
      name: internal
      resources:
        requests:
          cpu: "0.1"
          memory: "64Mi"
        limits:
          cpu: "0.3"
          memory: "96Mi"
      ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: mysql
  name: mysql
  namespace: net-policy
spec:
  containers:
    - env:
        - name: MYSQL_ROOT_PASSWORD
          value: paswrd
      image: mysql
      imagePullPolicy: Always
      name: mysql
      resources:
        requests:
          cpu: "0.1"
          memory: "64Mi"
        limits:
          cpu: "0.3"
          memory: "96Mi"
      ports:
        - containerPort: 3306
          protocol: TCP

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: payroll
  name: payroll
  namespace: net-policy
spec:
  containers:
    - env:
        - name: APP_NAME
          value: Payroll Application
        - name: BG_COLOR
          value: blue
      image: kodekloud/webapp-conntest
      imagePullPolicy: Always
      name: payroll
      resources:
        requests:
          cpu: "0.1"
          memory: "64Mi"
        limits:
          cpu: "0.3"
          memory: "96Mi"
      ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: net-policy
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    name: mysql
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: net-policy
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: external
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: internal-service
  namespace: net-policy
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080

  selector:
    name: internal
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: payroll-service
  namespace: net-policy
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: payroll
  type: NodePort
